--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ask For Sorry</title>
   </head>
   <body>
-    <img src="assets/date.png" alt="sorry?" class="header-img" />
+    <img src="date.png" alt="sorry?" class="header-img" />
     <div class="container" id="container">
       <img src="erm-fingers.gif" alt="please" class="image-1" />
       <img src="happy_nithin.gif" alt="yes" class="image-2 hide" />
